Enable ingress for LLM Router to allow external access
- Updated `llm-router-values-override.yaml` to enable ingress with NGINX configuration.
- Added detailed ingress setup instructions to `README.md`, including host configuration and testing methods.
- Provided examples for testing routing via ingress and port-forwarding.

--- a/customizations/LLM Router/llm-router-values-override.yaml
+++ b/customizations/LLM Router/llm-router-values-override.yaml
@@ -85,9 +85,30 @@ config:
   configMap:
     name: router-config-dynamo
 
-# Ingress Configuration (disabled for internal routing)
+# Ingress Configuration (enabled for external access)
 ingress:
-  enabled: false
+  enabled: true
+  className: "nginx"  # Use your cluster's ingress class
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
+  hosts:
+    - host: llm-router.local  # Change to your domain
+      paths:
+        - path: /
+          pathType: Prefix
+          backend:
+            service:
+              name: llm-router
+              port:
+                number: 8000
+  tls: []
+    # - secretName: llm-router-tls
+    #   hosts:
+    #     - llm-router.your-domain.com
 
 # Monitoring
 monitoring:
